# HW_10_web

./: pyproject.toml
notes/noteapp/: models.py
notes/notes/: settings.py
