[tool.poetry]
name = "project10"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Timochik <143872842+Timochik@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
